--- a/web/themes/custom/jescanada/css/style.css
+++ b/web/themes/custom/jescanada/css/style.css
@@ -43,6 +43,7 @@ section.featurette-6-6 {
   overflow: hidden;
 }
 section.featured-projects {
+  position: relative;
   background: #F2F2F2;
   padding: 40px 0px 95px 0px;
 }
