--- a/web/themes/custom/jescanada/css/user2.css
+++ b/web/themes/custom/jescanada/css/user2.css
@@ -7,9 +7,9 @@
     border-radius: 0;
     border-color: #004F5D;
 }
-.inner-page-corner-image .description .field--type-text-with-summary .row .col-sm-6 {
+.page-node-43 .inner-page-corner-image .description .field--type-text-with-summary .row .col-sm-6 {
     margin: 80px 0 50px 0;
-  }
+}
 .breadcrumb > li + li:before {
     content: ">" !important;
 }
@@ -18,6 +18,9 @@
     font-weight: bold;
     font-size: 26px;
     line-height: 40px;
+}
+.webform-submission-form .form-actions button.btn-primary {
+    padding: 1px 25px;
 }
 /* news listing */
 .impact-stories-listing .content .category{
@@ -40,6 +43,7 @@
     height: 27px;
     margin-bottom: 5px;
 }
+
 .view-id-impact_story_listing .row.impact-stories-listing .content .quote p {
     padding-bottom: 24px;
 }
